<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/reservation_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_detail_date"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/reservation_detail_begin_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_detail_begin_time"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/reservation_detail_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_detail_end_time"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/reservation_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_detail_name"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/reservation_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reservation_detail_description"
        android:layout_margin="10dp"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
       >

        <Button
            android:id="@+id/reservation_detail_btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/reservation_detail_btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"

            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>

