<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="be.vdab.project.meetingroomreservations.Activity.ReservationsForDayActivity" >

    <item
        android:id="@+id/action_add_reservation"
        android:title="@string/add_reservation"
        android:icon="@drawable/icon_add"
        android:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/action_show_reservations_for_day"
        android:title="@string/day_overview"
        android:icon="@drawable/icon_day"
        android:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/action_show_reservations_for_month"
        android:title="@string/month_overview"
        android:icon="@drawable/icon_month"
        android:showAsAction="ifRoom"></item>
</menu>
